--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
   </head>
   <body>
     <script type="module">
-      import { h, Component, render } from 'https://unpkg.com/preact?module';
-      import Spline from './spline.component.js';
+      import { h, Component, render } from 'https://cdn.pika.dev/preact';
+      import { useState, useEffect } from 'https://cdn.pika.dev/preact/hooks';
+      import LineChart from './linechart.component.js';
       import { scale, range } from './utils.js';
-
-      import { years, countries } from './data/life-expectancy.js';
-      console.log({ years, countries });
 
       const Legend = ({ position, ticks }) => {
         const [start, end] = [ticks[0], ticks[ticks.length - 1]];
@@ -19,27 +17,49 @@
         return ticks.map((tick) => h('span', { style: `${position}:${legendScale(tick)}%` }, tick));
       };
 
-      const xLegend = h(Legend, { position: 'left', ticks: range(1960, 2020, 10) });
-      const yLegend = h(Legend, { position: 'top', ticks: range(0, 90, 10) });
-      const xScale = scale([1960, 2020], [0, 300]);
-      const yScale = scale([0, 90], [100, 0]);
+      const xLegend = h(Legend, { position: 'left', ticks: range(1995, 2020, 5) });
+      const yLegend = h(Legend, { position: 'top', ticks: range(0, 1000, 50) });
+      const xScale = scale([1995, 2020], [0, 300]);
+      const yScale = scale([0, 1000], [100, 0]);
 
-      const random = ~~(Math.random() * 264);
+      const App = () => {
+        const [namesM, setNamesM] = useState({});
+        const [search, setSearch] = useState('Aron');
+        useEffect(() => {
+          fetch('./data/export_m.json')
+            .then((response) => response.json())
+            .then((data) => {
+              console.log(Object.keys(data).filter((name) => name.includes('null')));
+              setNamesM(data);
+            });
+        }, []);
 
-      const App = h(
-        'main',
-        null,
-        h('h1', null, countries[random].name),
-        h(
-          'div',
-          { class: 'chart' },
-          h('div', { class: 'x axis' }, xLegend),
-          h('div', { class: 'y axis' }, yLegend),
-          h(Spline, { points: countries[random].data, xScale, yScale }, 'test')
-        )
-      );
+        const names = ['Arthur', 'Bert'];
 
-      render(App, document.body);
+        const lines = names.map((name) => ({
+          title: name,
+          points: namesM[name]?.map((count, index) => ({ x: 1995 + index, y: count }))
+        }));
+        console.log(lines);
+
+        return h(
+          'main',
+          null,
+          h('input', {
+            class: 'name-search',
+            type: 'search',
+            value: search,
+            onInput: (e) => setSearch(e.target.value)
+          }),
+          h('div', { class: 'chart' },
+            h('div', { class: 'x axis' }, xLegend),
+            h('div', { class: 'y axis' }, yLegend),
+            h(LineChart, { lines: lines || [], xScale, yScale })
+          )
+        );
+      };
+
+      render(h(App), document.body);
     </script>
   </body>
 </html>
